# automated-tending

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  appveyor.yml  config.yaml  derivation.nix  format.sh  state.yaml  todos.org
app/: main.cpp
cmake/: Boost.cmake  CodeCoverage.cmake  Cotire.cmake  DI.cmake  Fruit.cmake  Misc.cmake  Spdlog.cmake
conf/: config.yaml  edge.path  movement.csv  movement.path  state.yaml  zigzag.path
docs/: Doxyfile.in
include/: app.h  common.h.in  config.h  dispatcher.h  example.h  general_config.h.in  gpio.h  logger.h  precompiled.h  qspdlog.hpp  state.h
include/devices/: device.h  input_device.h  limit_switch.h  output_device.h  stepper.h
include/devices/analog/: PCF8591.h  device.h
include/devices/digital/: device.h  input.h  output.h  pwm.h  stepper.h
include/mechanisms/: movement.h  rotation.h
include/mechanisms/_helper/: gen_speed_real_time.h  movement.h  movement_factory.h  speedy_stepper.h
include/mechanisms/finger/: movement.h
include/services/: movement_service.h  reset_service.h  rotary_encoder_service.h  service.h  tending_service.h  watering_service.h
include/utils/: csv.h  math.h  pid.h  qspdlog.h  signal_merge.h  simple_worker.h  sma.h  worker.h
include/windows/: main_window.h
resources/ui/: main_window.ui
src/: app.cpp  config.cpp  dispatcher.cpp  gpio.cpp  logger.cpp  state.cpp
src/devices/: device.cpp  input_device.cpp  limit_switch.cpp  output_device.cpp  stepper.cpp
src/devices/analog/: PCF8591.cpp  device.cpp
src/devices/digital/: device.cpp  input.cpp  output.cpp  pwm.cpp  stepper.cpp
src/mechanisms/: movement.cpp  rotation.cpp
src/mechanisms/_helper/: movement.cpp  speedy_stepper.cpp
src/mechanisms/finger/: movement.cpp
src/services/: movement_service.cpp  reset_service.cpp  rotary_encoder_service.cpp  service.cpp  tending_service.cpp  watering_service.cpp
src/utils/: csv.cpp  pid.cpp  qspdlog.cpp  signal_merge.cpp  simple_worker.cpp  sma.cpp  worker.cpp
src/windows/: main_window.cpp
tests/: CMakeLists.txt  main.cpp
